// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flood fill Sample input 1`] = `
Array [
  305,
  233,
]
`;

exports[`Flood fill Sample input 2`] = `
"▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╗ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ║ ▼ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╝ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═╗ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ 1 ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ╚═════════════════════╗ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ 0 ┃ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◄━━━━━━━━━━━━━━━┛ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
"
`;

exports[`Flood fill Sample input 2 1`] = `
Array [
  296,
  240,
]
`;

exports[`Flood fill Sample input 2 2`] = `
"▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ╔═╗ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ╔═╝ ▼ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╚═╗ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ 1 ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ╚═════════════════════╗ ║ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ 0 ┃ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◄━━━━━━━━━━━━━━━━━┛ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
"
`;

exports[`Flood fill Sample input 3 1`] = `
Array [
  198,
  336,
]
`;

exports[`Flood fill Sample input 3 2`] = `
"▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╗ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ║ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ║ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ╔═╝ ╚═► ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═╗ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ║ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
▤ ◇ ▤ ▤ ▤ ▤ ◇ 1 ▤ ◇ ▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ║ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▤ ▤ ◇ ▤ ▤ ▤ ▤ ╚═════════════════════╗ ║ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▤ ▤ ▤ ◇ ▤ ▤ ▤ ▤ ┏━━━━━━━━━━━━━━━━━┓ ╚═╝ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▤ ▤ ▤ ▤ ◇ ▤ ▤ ▤ ┃ ┏━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▲ ▤ ▤ ▤ ▤ ◇ ▤ ▤ 0 ┃ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
┗━━━━━━━━━━━━━━━━━┛ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧
▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇
▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧
◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧
▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧ ▧ ◇ ▧ ▧ ▧
"
`;

exports[`Game Sample input 1`] = `
"┏━━━━━━━┓ ◄═══════════════════════════════════════════════╗
┃ ⋅ ⋅ ⋅ ┗━━━━━━━━━━━0 ⋅ ┏━━━━━━━━━━━► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
┗━━━━━━━━━━━━━━━━━━━━━━━┛ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ║
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 0 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 1 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;

exports[`Game Start position when my index is 2 1`] = `
"⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 2─► ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ▲
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 1
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ 0 ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅ ⋅
"
`;
